--- a/style.css
+++ b/style.css
@@ -23,20 +23,57 @@ aside {
   grid-column: 1 / 2;
   grid-row: 1 / 3;
   padding: 20px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 80px auto;
+}
+
+nav {
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
 }
 
 header {
   grid-column: 2 / 3;
   grid-row: 1 / 2;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-template-rows: 1fr 2fr;
   gap: 20px;
   padding: 10px 40px;
 }
 
-header div {
+header form {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
   display: flex;
-  justify-content: space-between;
+  align-items: center;
+}
+
+.notifications {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 30px;
+}
+
+.profile {
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
+  display: flex;
+  align-items: center;
+}
+
+.buttons {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 30px;
 }
 
 main {
